#1647 Fix dataset name span tag css in multi column rename - show ... when dataset name is too long - add browser tooltip

--- a/discovery-frontend/src/assets/css/polaris.v2.page.css
+++ b/discovery-frontend/src/assets/css/polaris.v2.page.css
@@ -5843,7 +5843,7 @@ table.ddp-table-union tr td .ddp-data-dropped strong {color:#666eb2; font-weight
 .ddp-wrap-rename {position:relative; height:100%;}
 .ddp-wrap-rename .ddp-result {position:absolute; top:-20px; left:0; right:0;}
 .ddp-wrap-rename .ddp-col {float:right; color:#b7b9c2; font-size:12px;}
-.ddp-wrap-rename .ddp-name {color:#4b515b; font-size:13px; font-weight:bold;}
+.ddp-wrap-rename .ddp-name {display:block; color:#4b515b; font-size:13px; font-weight:bold; white-space:nowrap; text-overflow:ellipsis; overflow:hidden;}
 .ddp-wrap-rename .ddp-wrap-list {position:absolute; top:0; left:0; right:0; padding-bottom:10px; height:50%; border-top:1px solid #b7b9c2; border-bottom:1px solid #b7b9c2; box-sizing:Border-box; overflow:auto;}
 .ddp-wrap-rename .ddp-wrap-grid {position:absolute; left:0; right:0; bottom:0px; padding-top:10px; height:50%; box-sizing:Border-box;}
 .ddp-wrap-rename .ddp-wrap-grid .ddp-ui-grid {height:100%; border:1px solid #b7b9c2;}
